fix media query after tests on iphone6

--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,6 @@ table {
 
 #header {
   font-family: 'Josefin Slab', serif;
-  background-color: #7a0909;
-  background-image: url('../img/noise.png');
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   width: 100%;
@@ -116,7 +114,7 @@ table {
   -ms-flex-order: 2;
   -webkit-order: 2;
   order: 2;
-  background-color: #382924;
+  background-color: #313131;
   background-image: url('../img/noise.png');
 }
 
@@ -139,7 +137,7 @@ table {
   
   justify-content: center;
   align-content: flex-start;
-  height: 40vh;
+  height: 99vh;
   overflow: scroll;
 }
 
@@ -158,29 +156,28 @@ table {
   display: flex; 
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
-  -webkit-flex: 1 100%;
-  -ms-flex: 1 100%;
-  flex: 1 100%;
-  height: 50vh;
+  -webkit-flex: 1 50%;
+  -ms-flex: 1 50%;
+  flex: 1 50%;
+  height: 100vh;
 }
 
-@media all and (min-width: 600px) {
+
+@media only screen and (orientation:portrait), all and (max-width: 600px) and (min-height: 600px){
 
   .aside {
-    height: 100vh;
-    -webkit-flex: 1 50%;
-    -ms-flex: 1 50%;
-    flex: 1 50%; 
+    height: 50vh;
+    -webkit-flex: 1 100%;
+    -ms-flex: 1 100%;
+    flex: 1 100%; 
   }
 
   #collection-photos {
-    height: 99vh;
-  }
-
-  #footer {
-    height: 10px;
+    height: 40vh;
   }
 
 }
+
+
 
 
